updating some css 	modified:   about-us.html 	modified:   articles/article-stress-testing/stress-testing.html 	modified:   articles/article-template/article-template.html 	modified:   articles/basel/Basel-Reforms.html 	modified:   articles/merton-model/merton-model.html 	modified:   assets/css/main.css 	modified:   header.html 	new file:   images/placeholderlogo.jpg 	new file:   images/placeholderlogo.png 	modified:   index.html

--- a/about-us.html
+++ b/about-us.html
@@ -8,7 +8,7 @@
 
 <head>
 	<title>About Us</title>
-	<link rel="icon" type="image/x-icon" href="images/dogbannerlogo3.jpg">
+	<link rel="icon" type="image/x-icon" href="images/placeholderlogo.jpg">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -57,7 +57,7 @@
 							<!-- Feature -->
 							<section>
 								<a href="articles/article-stress-testing/stress-testing.html"
-									class="image featured"><img src="images/about-us/dog1.png" class="profile-image"
+									class="image aboutus"><img src="images/about-us/dog1.png" class="profile-image"
 										alt="" /></a>
 								<header>
 									<a href="articles/article-stress-testing/stress-testing.html">
@@ -74,7 +74,7 @@
 
 							<!-- Feature -->
 							<section>
-								<a href="articles/merton-model/merton-model.html" class="image featured"><img
+								<a href="articles/merton-model/merton-model.html" class="image aboutus"><img
 										src="images/about-us/dog2.png" class="profile-image" alt="" /></a>
 								<header>
 									<a href="articles/merton-model/merton-model.html">
@@ -91,7 +91,7 @@
 
 							<!-- Feature -->
 							<section>
-								<a href="articles/basel/Basel-Reforms.html" class="image featured"><img
+								<a href="articles/basel/Basel-Reforms.html" class="image aboutus"><img
 										src="images/about-us/dog3.png" class="profile-image" alt="" /></a>
 								<header>
 									<a href="articles/basel/Basel-Reforms.html">
