--- a/header.html
+++ b/header.html
@@ -7,7 +7,7 @@
 			<div class="container">
 
 				<!-- Logo -->
-				<h1 id="logo"><img src="/images/dogbannerlogo3.jpg" class="logo-icon" alt="Dog Logo">CynoRisk Analytics
+				<h1 id="logo"><img src="/images/placeholderlogo.jpg" class="logo-icon" alt="Dog Logo">CynoRisk Analytics
 					Inc</h1>
 				<hr class="logo-divider">
 				<!-- Nav -->
